<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="guepardoapps.lib.openweather.example.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="guepardoapps.lib.openweather.example.SettingsActivity$DataReloadPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_reload" />

    <header
        android:fragment="guepardoapps.lib.openweather.example.SettingsActivity$WallpaperPreferenceFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/pref_header_wallpaper" />

</preference-headers>
