<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="reload_enabled"
        android:title="@string/pref_title_reload_enabled" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/default_reload_frequency"
        android:dependency="reload_enabled"
        android:entries="@array/pref_reload_frequency_titles"
        android:entryValues="@array/pref_reload_frequency_values"
        android:key="reload_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_reload_frequency" />

</PreferenceScreen>
